--- a/src/main/java/com/silberbullet/forms/TemplateDialogForm.form
+++ b/src/main/java/com/silberbullet/forms/TemplateDialogForm.form
@@ -3,54 +3,63 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="718" height="560"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <splitpane id="72774">
+      <splitpane id="b0b95">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="400" height="-1"/>
             <preferred-size width="200" height="200"/>
-            <maximum-size width="500" height="-1"/>
           </grid>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="7348a" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="9667f" binding="projectPanel" layout-manager="BorderLayout" hgap="0" vgap="3">
             <constraints>
               <splitpane position="left"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="33743" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Project Structrue"/>
-                </properties>
-              </component>
-              <vspacer id="f1a5c">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
-              <scrollpane id="bc106">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <minimum-size width="200" height="-1"/>
-                    <maximum-size width="250" height="-1"/>
-                  </grid>
-                </constraints>
+              <grid id="3e61a" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints border-constraint="North"/>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="8ed2d" class="javax.swing.JTree" binding="projectStructureTree">
+                  <component id="747a7" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Project Structure"/>
+                    </properties>
+                  </component>
+                  <component id="f6303" class="javax.swing.JTextField" binding="searchField">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                </children>
+              </grid>
+              <component id="82bc1" class="javax.swing.JLabel" binding="selectedPathLabel">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <text value="Selected: &lt;none&gt;"/>
+                </properties>
+              </component>
+              <scrollpane id="92ddd">
+                <constraints border-constraint="Center"/>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="6530c" class="javax.swing.JTree" binding="projectStructureTree">
                     <constraints/>
                     <properties/>
                   </component>
@@ -58,7 +67,7 @@
               </scrollpane>
             </children>
           </grid>
-          <grid id="9682f" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="2a5a7" binding="modulesPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <splitpane position="right"/>
@@ -66,35 +75,42 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="d1156" class="javax.swing.JLabel">
+              <component id="bc491" class="javax.swing.JSeparator">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="16217" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Modules"/>
+                  <text value="Available Modules"/>
                 </properties>
               </component>
-              <scrollpane id="c07db">
+              <component id="55207" class="javax.swing.JList" binding="moduleTemplatesList">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <minimum-size width="200" height="-1"/>
-                    <maximum-size width="250" height="-1"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
                 <properties/>
-                <border type="none"/>
-                <children>
-                  <component id="62533" class="javax.swing.JList" binding="moduleList">
-                    <constraints/>
-                    <properties/>
-                  </component>
-                </children>
-              </scrollpane>
+              </component>
+              <component id="17a2c" class="javax.swing.JButton" binding="addModule" custom-create="true">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <label value="Add -&gt;"/>
+                  <text value="Add -&gt;"/>
+                </properties>
+              </component>
             </children>
           </grid>
         </children>
       </splitpane>
-      <hspacer id="a8742">
+      <hspacer id="5a19f">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
