--- a/src/main/java/com/silberbullet/forms/TemplateDialogForm.form
+++ b/src/main/java/com/silberbullet/forms/TemplateDialogForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.silberbullet.forms.TemplateDialogForm">
   <grid id="27dc6" binding="rootPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="927" height="672"/>
+      <xy x="20" y="20" width="1154" height="786"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -35,23 +35,81 @@
               <text value="Selected module: (none)"/>
             </properties>
           </component>
-          <scrollpane id="b0cfd">
+          <grid id="140f4" binding="appliedDependenciesPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints border-constraint="South"/>
+            <properties>
+              <minimumSize width="200" height="200"/>
+            </properties>
+            <border type="none" title="Applied Dependencies"/>
+            <children>
+              <scrollpane id="ee964">
+                <constraints border-constraint="North"/>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="960ab" class="javax.swing.JList" binding="appliedDependenciesList">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+              <grid id="f71c5" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="bae63" class="javax.swing.JButton" binding="removeButton1" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Remove"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+            </children>
+          </grid>
+          <grid id="fca4" binding="availableModulesPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints border-constraint="Center"/>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="9ed14" class="javax.swing.JList" binding="availableModulesList">
-                <constraints/>
+              <scrollpane id="9d0a">
+                <constraints border-constraint="Center"/>
                 <properties/>
-              </component>
+                <border type="none"/>
+                <children>
+                  <grid id="63fab" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints/>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="1085b" class="javax.swing.JList" binding="availableModulesList">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="50"/>
+                          </grid>
+                        </constraints>
+                        <properties/>
+                      </component>
+                    </children>
+                  </grid>
+                </children>
+              </scrollpane>
+              <grid id="f861c" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+                <constraints border-constraint="South"/>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="f0690" class="javax.swing.JButton" binding="addLibraryButton">
+                    <constraints/>
+                    <properties>
+                      <text value="ADD"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
-          </scrollpane>
-          <grid id="46356" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints border-constraint="South"/>
-            <properties/>
-            <border type="none"/>
-            <children/>
           </grid>
         </children>
       </grid>
@@ -120,7 +178,7 @@
               <component id="716ba" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                    <preferred-size width="84" height="36"/>
+                    <preferred-size width="84" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -130,7 +188,7 @@
               <component id="50770" class="javax.swing.JTextField" binding="moduleNameField">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="36"/>
+                    <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties/>
