--- a/src/main/java/com/silberbullet/panels/builder/ModuleBuilderPanel.form
+++ b/src/main/java/com/silberbullet/panels/builder/ModuleBuilderPanel.form
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.silberbullet.panels.builder.ModuleBuilderPanel">
-  <grid id="27dc6" binding="moduleBuilderPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="moduleBuilderPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="603" height="786"/>
     </constraints>
     <properties/>
     <border type="none" title=""/>
     <children>
-      <nested-form id="194b" form-file="com/silberbullet/panels/builder/info/ModuleInfoPanel.form" binding="moduleInfoPanel">
-        <constraints border-constraint="North"/>
+      <nested-form id="3e8d0" form-file="com/silberbullet/panels/builder/info/ModuleInfoPanel.form" binding="moduleInfoPanel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
       </nested-form>
-      <nested-form id="c1f0c" form-file="com/silberbullet/panels/builder/preview/PreviewPanel.form" binding="previewPanel">
-        <constraints border-constraint="South"/>
+      <nested-form id="a16c9" form-file="com/silberbullet/panels/builder/preview/PreviewPanel.form" binding="previewPanel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
       </nested-form>
     </children>
   </grid>
